--- a/quiz2.html
+++ b/quiz2.html
@@ -51,9 +51,10 @@
 
 <body>
 
+    <b>Enter  Name : </b> <input type="text" id="username"/>
     <h2>Tabs</h2>
     <p>Click on the buttons inside the tabbed menu:</p>
-
+    <h5 id="show-score"></h5>
     <div class="tab">
         <button class="tablinks" onclick="openQuiz(event, 'quiz1')">quiz2</button>
         <button class="tablinks" onclick="openQuiz(event, 'quiz2')">quiz1</button>
@@ -156,11 +157,8 @@
         }
         function quiz1Submit() {
 
-            console.log("user", quiz1_current_user_ans, quiz1_current_user_ans.length)
-            console.log("actual", quiz1_current_actual_ans, quiz1_current_actual_ans.length)
-            console.log("actualchkbx", quiz1_array_count, quiz1_res[quiz1_array_count].type)
-
-
+            var uname=  document.getElementById("username").value
+         
             if (quiz1_res[quiz1_array_count].type == "checkboxes") {
                 var chkbox_ans_arr = []
                 if (document.getElementById("chkBox1").checked) {
@@ -205,18 +203,18 @@
 
                 var percent= (right_answers * 100)/20
                 if(percent > 80){
-                    alert("Congratulations <student name>! You pass the quiz")
+                    alert('Congratulations '+uname+'! You pass the quiz')
                     // $("#quiz1_q").append('<h1> Congratulations <student name>! You pass the quiz</h1>')
                 }else{
                     alert(" Sorry <Student Name>, you fail the quiz")
-                    $("#quiz1_q").append('<h1> Sorry <Student Name>, you fail the quiz</h1>')
+                    $("#quiz1_q").append('<h1> Sorry '+uname+', you fail the quiz</h1>')
 
                     
                 }
-
             }
             question_count = question_count + 1;
             quiz1_array_count = quiz1_array_count + 1;
+            document.getElementById("show-score").innerHTML= "Your score "+ uname +"  : "+right_answers
 
 
         }
