--- a/quiz2.html
+++ b/quiz2.html
@@ -84,6 +84,7 @@
             border-top: none;
         }
     </style>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     
 </head>
 
